--- a/css/main.css
+++ b/css/main.css
@@ -21,7 +21,9 @@ img {
   max-width: 100%;
 }
 
-
+h3{
+  margin: 0 0 1em 0;
+}
 
 /**********************************
 HEADING
@@ -119,6 +121,48 @@ PAGE: PORTFOLIO
   font-size: 0.75em;
   color: #bdc3c7
 }
+
+/**********************************
+Page: ABOUT
+***********************************/
+
+.profile-photo{
+  display: block;
+  max-width: 300px;
+  margin: 0 auto 30px;
+  border-radius: 100%;
+}
+
+/**********************************
+Page: CONTACT
+***********************************/
+
+.contact-info a {
+  display: block;
+  min-height: 20px;
+  background-repeat: no-repeat;
+  background-size: 20px 20px;
+  padding: 0 0 0 30px;
+  margin: 0 0 10px;
+}
+
+.contact-info{
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  font-size: 0.9em;
+}
+
+.contact-info li.phone a {
+  background-image: url('../img/phone.png');
+}
+.contact-info li.mail a {
+  background-image: url('../img/mail.png');
+}
+.contact-info li.telegram a {
+  background-image: url('../img/telegram-logo.png');
+}
+
 
 
 /**********************************
